chnages done by lalit for restaurant page i.e ios issue for spacing

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -25,8 +25,8 @@
 .margin-top-minus1 {
 	margin-top: -1px !important;
 }
-.margin-top-10 {
-	margin-top:10px;
+#restaurants .margin-top-10 {
+	margin-top:15px;
 }
 
 
@@ -68,7 +68,7 @@
 /**restaurants.html**/
 .loadingButton {
 	background-color: #cccccc;
-    font-size: 20px;
+     font-size: 20px;
     opacity: 0.56;
     padding-bottom: 15px;
     padding-top: 15px;
